--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -6,14 +6,17 @@
     <div class="container" x-data="testData()">
         <div class="row">
             <div class="col-sm-9">
-                <h3>Teams</h3>
+                <h3 x-text="headerTitle"></h3>
             </div>
             <div class="col-sm-3">
-                <button type="button" class="btn btn-primary" @click="showModal = ! showModal">Primary</button>
+                <button x-show="showList" type="button" class="btn btn-primary" @click="createTeam()">
+                    <i class="fa fa-plus"></i>
+                    &nbsp;New team
+                </button>
             </div>
         </div>
-        <div class="row">
-            <table class="table">
+        <div class="row" x-show="showList">
+            <table class="table" >
                 <thead>
                 <tr>
                     <th scope="col">Name</th>
@@ -33,11 +36,11 @@
                                 <button class="btn btn-xs btn-info">
                                     <i class="ace-icon fa fa-eye bigger-120"></i>
                                 </button>
-                                <button class="btn btn-xs btn-default">
+                                <button class="btn btn-xs btn-secondary" @click="editTeam(team.id)">
                                     <i class="ace-icon fa fa-edit bigger-120"></i>
                                 </button>
                                 <button class="btn btn-xs btn-danger"
-                                        @click="removeTeam(team.id).then(r => retrieveTeam())">
+                                        @click="removeTeam(team.id)">
                                     <i class="ace-icon fa fa-close bigger-120"></i>
                                 </button>
                             </div>
@@ -47,32 +50,30 @@
                 </tbody>
             </table>
         </div>
-
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Launch demo modal
-        </button>
-
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        ...
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
+         <div class="row" x-show="showForm">
+             <div class="col-sm-12">
+                 <form @submit.prevent="submitForm()">
+                     <div class="mb-3">
+                         <label for="nameInput" class="form-label">Name</label>
+                         <input type="text" class="form-control" id="nameInput" x-model="formData.name">
+                     </div>
+                     <div class="mb-3">
+                         <label for="countryInput" class="form-label">Country</label>
+                         <input type="text" class="form-control" id="countryInput" x-model="formData.country">
+                     </div>
+                     <div class="mb-3">
+                         <label for="balanceInput" class="form-label">Balance</label>
+                         <input type="text" class="form-control" id="balanceInput" x-model="formData.acountBalance">
+                         <div x-show="isNaN(formData.acountBalance)" class="form-text text-danger">This value is not valid</div>
+                     </div>
+                     <button class="btn btn-primary" @click.prevent="toogleForm()">
+                         <i class="fa fa-close"></i>
+                         &nbsp;Cancel
+                     </button>
+                     <button type="submit" class="btn btn-primary">Submit</button>
+                 </form>
+             </div>
+         </div>
 
     </div>
     <script type="application/javascript">
@@ -80,7 +81,11 @@
             return {
                 teams: [],
                 showList: true,
-                showModal: false,
+                showForm: false,
+                showDetail: false,
+                editData: false,
+                editId: null,
+                headerTitle: 'Teams',
                 formData: {
                     name: "",
                     country: "",
@@ -91,15 +96,68 @@
                     this.teams = await (await fetch(uri)).json()
                 },
 
+                toogleForm(title = 'Teams') {
+                    this.showList = !this.showList;
+                    this.showForm = !this.showForm;
+                    this.headerTitle = title;
+                    this.initFormData();
+                },
+
+                toogleVue(title = 'Teams') {
+                    this.showList = !this.showList;
+                    this.showVue = !this.showVue;
+                    this.headerTitle = title;
+                },
+
                 async removeTeam(teamId) {
                     let uri = this.uri + teamId;
 
                     await fetch(uri, {
                         method: 'DELETE',
+                    }).then(() => {
+                        this.retrieveTeam();
                     });
                 },
 
-                async createTeam() {
+                initFormData(team = null) {
+                    if (team) {
+                        this.formData.name = team.name;
+                        this.formData.country = team.country;
+                        this.formData.acountBalance = team.acountBalance;
+                    } else {
+                        this.formData = {
+                            name: "",
+                            country: "",
+                            acountBalance: 0,
+                        };
+                    }
+
+                    this.editData = false;
+                },
+
+                submitForm() {
+                    if (this.editData) {
+                        this.updateTeam().then(this.retrieveTeam);
+                    }
+                    this.initFormData();
+                },
+
+                createTeam() {
+                    this.toogleForm('New team');
+                    this.editData = false;
+                },
+
+                editTeam(teamId) {
+                    this.toogleForm('Edit team');
+                    let team = this.teams.find(elt => elt.id == teamId);
+                    this.editId = teamId;
+                    this.initFormData(team);
+                    console.log(team);
+                    console.log(this.formData);
+                    this.editData = true;
+                },
+
+                async addTeam() {
                     fetch(this.uri, {
                         method: "POST",
                         headers: {
@@ -109,10 +167,25 @@
                         body: JSON.stringify(this.formData),
                     })
                         .then(() => {
-                            this.formData.name = "";
-                            this.formData.country = "";
-                            this.formData.acountBalance = 0;
-                            this.formMessage = "Form successfully submitted.";
+                            this.initFormData();
+                        })
+                        .catch(() => {
+                            this.formMessage = "Something went wrong.";
+                        });
+                },
+
+                async updateTeam() {
+                    let uri = this.uri+this.editId;
+                    fetch(uri, {
+                        method: "PUT",
+                        headers: {
+                            "Content-Type": "application/json",
+                            Accept: "application/json",
+                        },
+                        body: JSON.stringify(this.formData),
+                    })
+                        .then(() => {
+                            this.initFormData();
                         })
                         .catch(() => {
                             this.formMessage = "Something went wrong.";
