--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Hello TeamController!{% endblock %}
 
 {% block body %}
-    <div class="container" x-data="testData()">
+    <div class="container" x-data="teams()" x-init="retrieveTeam()">
         <div class="row">
             <div class="col-sm-9">
                 <h3 x-text="headerTitle"></h3>
             </div>
             <div class="col-sm-3">
-                <button x-show="showList" type="button" class="btn btn-primary" @click="createTeam()">
+                <button x-show="showList" type="button" class="btn btn-primary" @click="openForm()">
                     <i class="fa fa-plus"></i>
                     &nbsp;New team
                 </button>
@@ -50,76 +50,55 @@
                 </tbody>
             </table>
         </div>
-         <div class="row" x-show="showForm">
-             <div class="col-sm-12">
-                 <form @submit.prevent="submitForm()">
-                     <div class="mb-3">
-                         <label for="nameInput" class="form-label">Name</label>
-                         <input type="text" class="form-control" id="nameInput" x-model="formData.name">
-                     </div>
-                     <div class="mb-3">
-                         <label for="countryInput" class="form-label">Country</label>
-                         <input type="text" class="form-control" id="countryInput" x-model="formData.country">
-                     </div>
-                     <div class="mb-3">
-                         <label for="balanceInput" class="form-label">Balance</label>
-                         <input type="text" class="form-control" id="balanceInput" x-model="formData.acountBalance">
-                         <div x-show="isNaN(formData.acountBalance)" class="form-text text-danger">This value is not valid</div>
-                     </div>
-                     <button class="btn btn-primary" @click.prevent="toogleVue()">
-                         <i class="fa fa-close"></i>
-                         &nbsp;Cancel
-                     </button>
-                     <button type="submit" class="btn btn-primary">Submit</button>
-                 </form>
-             </div>
-         </div>
-
+        <div class="row" x-show="showForm">
+            <div class="col-sm-12">
+                <form @submit.prevent="submitForm()">
+                    <div class="mb-3">
+                        <label for="nameInput" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="nameInput" x-model="formData.name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="countryInput" class="form-label">Country</label>
+                        <input type="text" class="form-control" id="countryInput" x-model="formData.country">
+                    </div>
+                    <div class="mb-3">
+                        <label for="balanceInput" class="form-label">Balance</label>
+                        <input type="text" class="form-control" id="balanceInput" x-model="formData.acountBalance">
+                        <div x-show="isNaN(formData.acountBalance)" class="form-text text-danger">This value is not valid</div>
+                    </div>
+                    <button class="btn btn-primary" @click.prevent="closeForm()">
+                        <i class="fa fa-close"></i>
+                        &nbsp;Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
     <script type="application/javascript">
-        function testData() {
+        function teams() {
             return {
                 teams: [],
                 showList: true,
-                showForm: false,
-                showDetail: false,
+                headerTitle: 'Teams',
+                uri: '{{ path('api_team_list') }}',
+                showForm:false,
                 editData: false,
                 editId: null,
-                headerTitle: 'Teams',
                 formData: {
                     name: "",
                     country: "",
                     acountBalance: 0,
                 },
-                uri: '{{ path('api_team_list') }}',
-                createUri: {{ path('api_team_create') }},
 
-                async retrieveTeam(uri = this.uri) {
-                    this.teams = await (await fetch(uri)).json()
-                },
-
-                toogleForm(title = 'Teams') {
+                openForm() {
                     this.showList = false;
                     this.showForm = true;
-                    this.headerTitle = title;
-                    this.initFormData();
                 },
 
-                toogleVue(title = 'Teams') {
+                closeForm() {
                     this.showList = true;
-                    this.showVue = false;
                     this.showForm = false;
-                    this.headerTitle = title;
-                },
-
-                async removeTeam(teamId) {
-                    let uri = this.uri + teamId;
-
-                    await fetch(uri, {
-                        method: 'DELETE',
-                    }).then(() => {
-                        this.retrieveTeam();
-                    });
                 },
 
                 initFormData(team = null) {
@@ -138,50 +117,16 @@
                     this.editData = false;
                 },
 
-                submitForm() {
-                    if (this.editData) {
-                        this.updateTeam().then(this.retrieveTeam());
-                    } else {
-                        this.addTeam().then(this.retrieveTeam());
-                    }
-                    this.toogleVue();
-                    this.initFormData();
-                },
-
-                createTeam() {
-                    this.toogleForm('New team');
-                    this.editData = false;
-                },
-
                 editTeam(teamId) {
-                    this.toogleForm('Edit team');
-                    let team = this.teams.find(elt => elt.id == teamId);
+                    this.openForm();
+                    let team = this.teams.find(elt => elt.id === teamId);
                     this.editId = teamId;
                     this.initFormData(team);
-                    console.log(team);
-                    console.log(this.formData);
                     this.editData = true;
                 },
 
-                async addTeam() {
-                    console.log(this.formData);
-                    await fetch(this.createUri, {
-                        method: "POST",
-                        headers: {
-                            "Content-Type": "application/json",
-                            Accept: "application/json",
-                        },
-                        body: JSON.stringify(this.formData),
-                    })
-                        .then(() => {
-                            this.initFormData();
-                        })
-                        .catch(() => {
-                            this.formMessage = "Something went wrong.";
-                        });
-                },
-
                 async updateTeam() {
+                    this.formData.acountBalance = parseInt(this.formData.acountBalance);
                     let uri = this.uri+this.editId;
                     await fetch(uri, {
                         method: "PUT",
@@ -192,17 +137,54 @@
                         body: JSON.stringify(this.formData),
                     })
                         .then(() => {
-                            this.initFormData();
+                            this.closeForm();
+                            this.retrieveTeam();
                         })
                         .catch(() => {
                             this.formMessage = "Something went wrong.";
                         });
                 },
 
-                init() {
-                    this.toogleVue();
-                    this.retrieveTeam();
-                }
+                submitForm() {
+                    if (this.editData) {
+                        this.updateTeam();
+                    } else {
+                        this.addTeam();
+                    }
+                },
+
+                async retrieveTeam(uri = this.uri) {
+                    this.teams = await (await fetch(uri)).json()
+                },
+
+                async removeTeam(teamId) {
+                    let uri = this.uri + teamId;
+
+                    await fetch(uri, {
+                        method: 'DELETE',
+                    }).then(() => {
+                        this.retrieveTeam();
+                    });
+                },
+
+                async addTeam() {
+                    this.formData.acountBalance = parseInt(this.formData.acountBalance);
+                    await fetch(this.uri, {
+                        method: "POST",
+                        headers: {
+                            "Content-Type": "application/json",
+                            Accept: "application/json",
+                        },
+                        body: JSON.stringify(this.formData),
+                    })
+                        .then(() => {
+                            this.closeForm();
+                            this.retrieveTeam();
+                        })
+                        .catch(() => {
+                            this.formMessage = "Something went wrong.";
+                        });
+                },
             }
         }
     </script>
