--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.12.1/dist/cdn.min.js"></script>
     {% endblock %}
 </head>
-<body class="modal-open">
+<body class="modal-open" style="padding-top: 30px">
 <div class="container-fluid">
     {% block body %}{% endblock %}
 </div>
