--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello TeamController!{% endblock %}
 
 {% block body %}
-    <div class="container" x-data="teams()" x-init="retrieveTeam()">
+    <div class="container" x-data="teams()" x-init="retrieveTeam()" style="padding-top: 20px">
         <div class="row">
             <div class="col-sm-9">
                 <h3 x-text="headerTitle"></h3>
