--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,8 +23,8 @@
     {% endblock %}
 </head>
 <body class="modal-open" >
-<div class="container-fluid">
-    {% include "partial/navbar.html.twig" %}
+{% include "partial/navbar.html.twig" %}
+<div class="container-fluid" style="padding-top: 20px">
     {% block body %}{% endblock %}
 </div>
 </body>
